# otto

./: Makefile  README.md  license  main.py  pypackage.toml  pyproject.toml
ghapi/: ghapi.py
otto/cli/: main.py
otto/core/cli/: main.py
otto/core/config/: config.py  file.py
otto/ghapi/: ghapi.py
otto/utils/azapi/: azapi.py
otto/utils/ghapi/: config.py  ghapi.py
src/: main.py
src/ghapi/: ghapi.py
