[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "otto"
version = "0.0.7"
authors = [
  { name="Roy Larsen", email="roy.larsen@mobileheartbeat.com" },
]
description = "DevOps Automation Tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "click >=8.1",
  "requests >=2.28",
  "tomlkit >=0.11.0"
]

[project.urls]
"Homepage" = "https://github.com/mhroylarsen/otto"
"Bug Tracker" = "https://github.com/mhroylarsen/otto/issues"

[project.scripts]
otto = "otto.core.cli.main:cli"
